--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/node,linux,macos,windows
+
+# Python venv
+.venv/
+
+# Editor 
+.vscode/
