--- a/crawler/pyproject.toml
+++ b/crawler/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "canifly-crawler"
+name = "canifly_crawler"
 version = "0.1.0"
 description = ""
 authors = ["José Ribeiro <ribeirojose@me.com>"]
@@ -17,3 +17,6 @@ isort = "^4.3.21"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.poetry.scripts]
+update-data = "canifly_crawler.main:main"
