--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "static": "next build && next export && touch ./out/.nojekyll && echo 'canifly.sasse.it' > ./out/CNAME",
     "serve-static": "serve out",
     "deploy": "gh-pages -d out -t true",
-    "update-data": "cd crawler && poetry install && poetry shell && python main.py"
+    "update-data": "cd crawler && poetry install && poetry run update-data"
   },
   "dependencies": {
     "next": "^9.4.1",
