--- a/crawler/pyproject.toml
+++ b/crawler/pyproject.toml
@@ -9,14 +9,17 @@ python = "^3.8"
 beautifulsoup4 = "^4.9.1"
 requests = "^2.23.0"
 jsonnet = "^0.16.0"
+requests_html = "^0.10.0"
+selenium-wire = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 isort = "^4.3.21"
+ipython = "^7.14.0"
+
+[tool.poetry.scripts]
+update-data = "canifly_crawler.unwfp_api_data:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-[tool.poetry.scripts]
-update-data = "canifly_crawler.main:main"
