Update deploy script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "next start",
     "static": "next build && next export && touch ./out/.nojekyll && echo 'canifly.sasse.it' > ./out/CNAME",
     "serve-static": "serve out",
-    "deploy": "gh-pages -d out -t true",
+    "deploy": "yarn static && gh-pages -d out -t true",
     "update-data": "cd crawler && poetry install && poetry run update-data"
   },
   "dependencies": {
