Lint python files

--- a/crawler/pyproject.toml
+++ b/crawler/pyproject.toml
@@ -16,6 +16,7 @@ selenium-wire = "^1.1.0"
 black = "^19.10b0"
 isort = "^4.3.21"
 ipython = "^7.14.0"
+flake8 = "^3.8.2"
 
 [tool.poetry.scripts]
 update-data = "canifly_crawler.unwfp_api_data:main"
